--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,6 +40,7 @@ layout: default
             {% else %}
             <h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
             {% endif %}
+            <img src="{{ post.background }}" alt="{{ post.background }}">
           </a>
           <p class="post-meta">Posted by
             {% if post.author %}
