--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,3 +65,13 @@ layout: default
       </div>
     </div>
   </div>
+
+
+
+<script src="https://utteranc.es/client.js"
+        repo="porterbmoody.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
