--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -68,10 +68,10 @@ layout: default
 
 
 
-<script src="https://utteranc.es/client.js"
+<!-- <script src="https://utteranc.es/client.js"
         repo="porterbmoody.github.io"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
         async>
-</script>
+</script> -->
