--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: default
         {{ content }}
 
         <!-- Home Post List -->
-        {% for post in site.posts limit : 5 %}
+        {% for post in site.posts limit : 6 %}
 
         <article class="post-preview">
           <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
@@ -64,6 +64,13 @@ layout: default
 
       </div>
     </div>
+    <script src="https://utteranc.es/client.js"
+        repo="porterbmoody.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+    </script>
   </div>
 
 
