--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,13 +64,15 @@ layout: default
 
       </div>
     </div>
+    <p>POOPOO</p>
     <script src="https://utteranc.es/client.js"
-        repo="porterbmoody.github.io"
-        issue-term="pathname"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
+    repo="porterbmoody.github.io"
+    issue-term="pathname"
+    theme="github-light"
+    crossorigin="anonymous"
+    async>
     </script>
+    <p>PEEPEE</p>
   </div>
 
 
