--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-md-12 mx-auto">
+        <div class="col-lg-`0 col-md-8 mx-auto">
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
             {% if site.description %}
