--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
     {% endif %}
     <div class="overlay"></div>
     <div class="container">
-      <div class="row">
+      <div class="row" width="80%">
         <div class="col-lg-8 col-md-4 mx-auto">
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
