--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
     {% endif %}
     <div class="overlay"></div>
     <div class="container">
-      <div class="row" style="width:800px;">
+      <div class="row" style="text-align: left; width:855px;">
         <div class="col-lg-8 col-md-12 mx-auto">
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
@@ -24,7 +24,7 @@ layout: default
   </header>
 
   <div class="container">
-    <div class="row" style="width:800px;">
+    <div class="row" style="text-align: left; width:855px;">
       <div class="col-lg-8 col-md-12 mx-auto">
 
         {{ content }}
