--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,10 @@ layout: default
   <header class="masthead">
     {% endif %}
     <div class="overlay"></div>
+    <div class="tc-l pv4 pv6-l ph3 ph4-ns">
+      <h1>{{ site.title }}</h1>
+      <h2>{{ site.description }}</h2>
+    </div>
     <div class="container">
       <div class="row" style="text-align: center; width:855px;">
         <div class="col-lg-8 col-md-12 mx-auto">
