--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,17 +10,17 @@ layout: default
     {% endif %}
     <div class="overlay"></div>
     <div class="tc-l pv4 pv6-l ph3 ph4-ns">
-      <h1>{{ site.title }}</h1>
-      <h2>{{ site.description }}</h2>
+      <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">{{ site.title }}</h1>
+      <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">{{ site.description }}</h2>
     </div>
+    {% endif %}
     <div class="container">
-      <div class="row" style="text-align: center; width:855px;">
-        <div class="col-lg-8 col-md-12 mx-auto">
-          <div class="page-heading">
+      <!-- <div class="row" style="text-align: center; width:855px;"> -->
+        <!-- <div class="col-lg-8 col-md-12 mx-auto"> -->
+          <!-- <div class="page-heading"> -->
             <h1>{{ site.title }}</h1>
             {% if site.description %}
             <span class="subheading">{{ site.description }}</span>
-            {% endif %}
           </div>
         </div>
       </div>
