--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,18 +13,19 @@ layout: default
       <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">{{ site.title }}</h1>
       <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">{{ site.description }}</h2>
     </div>
-    {% endif %}
-    <div class="container">
+    
+    <!-- <div class="container"> -->
       <!-- <div class="row" style="text-align: center; width:855px;"> -->
         <!-- <div class="col-lg-8 col-md-12 mx-auto"> -->
           <!-- <div class="page-heading"> -->
-            <h1>{{ site.title }}</h1>
-            {% if site.description %}
-            <span class="subheading">{{ site.description }}</span>
-          </div>
-        </div>
-      </div>
-    </div>
+            <!-- <h1>{{ site.title }}</h1> -->
+            <!-- {% if site.description %} -->
+            <!-- <span class="subheading">{{ site.description }}</span> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+    <!-- </div> -->
+    {% endif %}
   </header>
 
   <div class="container">
