--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,12 +9,12 @@ layout: default
   <header class="masthead">
     {% endif %}
     <div class="overlay"></div>
-    <div class="tc-l pv4 pv6-l ph3 ph4-ns">
-      <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">{{ site.title }}</h1>
-      <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">{{ site.description }}</h2>
-    </div>
+    <div class="container">
+      <div class="tc-l pv4 pv6-l ph3 ph4-ns">
+        <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">{{ site.title }}</h1>
+        <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">{{ site.description }}</h2>
+      </div>
     
-    <!-- <div class="container"> -->
       <!-- <div class="row" style="text-align: center; width:855px;"> -->
         <!-- <div class="col-lg-8 col-md-12 mx-auto"> -->
           <!-- <div class="page-heading"> -->
@@ -24,7 +24,7 @@ layout: default
           <!-- </div> -->
         <!-- </div> -->
       <!-- </div> -->
-    <!-- </div> -->
+    </div>
     {% endif %}
   </header>
 
