--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
         <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">{{ site.description }}</h2>
       </div> -->
     
-      <div class="row" style="text-align: center; width:855px;">
+      <div class="row">
         <div class="col-lg-8 col-md-12 mx-auto">
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
@@ -29,7 +29,7 @@ layout: default
   </header>
 
   <div class="container">
-    <div class="row" style="text-align: center; width:855px;">
+    <div class="row">
       <div class="col-lg-8 col-md-12 mx-auto">
 
         {{ content }}
